number 28. including adding name and asg13 to the normal layout footer and admin layout footer

--- a/GuitarShop/Views/Shared/_Layout.cshtml
+++ b/GuitarShop/Views/Shared/_Layout.cshtml
@@ -51,7 +51,7 @@
     </main>
     <footer>
         <hr />
-        <p>&copy; @DateTime.Now.Year - Guitar Shop</p>
+        <p>&copy; @DateTime.Now.Year - Guitar Shop - Connor Fouks - Asg13</p>
     </footer>
 </body>
 </html>
