--- a/GuitarShop/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/GuitarShop/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -52,7 +52,7 @@
     </main>
     <footer>
         <hr />
-        <p>&copy; @DateTime.Now.Year - Guitar Shop</p>
+        <p>&copy; @DateTime.Now.Year - Guitar Shop - Connor Fouks - Asg13</p>
     </footer>
 </body>
 </html>
